k8s/postgres-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: posgtres-cluster-ip-service
  # Since postgres deployment is connected to this ClusterIP service
  # So this name of the service will be the HOST name to connect to postgres.
  # Coz access to postgres deployment is through this ClusterIP service.
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432
