k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx # means we want to create a ingress service based on the nginx project
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # configure how the actual copy of nginx behaves.
    # tell that now you will be serving on https also. And you should be expecting a certificate from issuer: letsencrypt-prod
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    # force all traffic to redirect to https
    # no traffic should be allowed on http as it is not secure
    # reconfigure nginx as ask all traffic through https
    nginx.ingress.kubernetes.io/ssl-redirect: 'true' # DISABLE FOR DEVELOPMENT
spec:
  tls:
    # so we say we want to allow https traffic from the domains mentioned
    # and the secret that holds the certificate information is present in the
    # secretName
    - hosts:
        - ishantoberoi.com
        - www.ishantoberoi.com
      secretName: ishantoberoi-com # secretName in Certificate.yml
  rules:
    - host: ishantoberoi.com
      http:
        paths:
          - path: /?(.*) # this will help us save from the error we had see in past this.seenIndexes.map is not a function.
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*) # this will help us save from the error we had see in past this.seenIndexes.map is not a function.
            backend :
              serviceName: server-cluster-ip-service
              servicePort: 5000
    # ishantoberoi.com and www.ishantoberoi.com are treated as two different hosts.
    # This is how ingress-nginx is written.
    - host: www.ishantoberoi.com
      http:
        paths:
          - path: /?(.*) # this will help us save from the error we had see in past this.seenIndexes.map is not a function.
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*) # this will help us save from the error we had see in past this.seenIndexes.map is not a function.
            backend :
              serviceName: server-cluster-ip-service
              servicePort: 5000



# For developmemt rules:
# rules:
#   - http:
#       paths:
#         - path: /?(.*) # this will help us save from the error we had see in past this.seenIndexes.map is not a function.
#           backend:
#             serviceName: client-cluster-ip-service
#             servicePort: 3000
#         - path: /api/?(.*) # this will help us save from the error we had see in past this.seenIndexes.map is not a function.
#           backend :
#             serviceName: server-cluster-ip-service
#             servicePort: 5000
